Working fetch and map drawing.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "map"
   ],
   "author": "Nigel Hanlon <nigel@mapwolf.net>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
+  }
 }
